# SHROOM-CAP-EN-LT

./: download_dataset.py  explore_data_structure.ipynb  generate_dataset_with_transformers.py  main.py  pyproject.toml
data/: Helsinki-NLP__shroom-cap__default__train__first_rows.csv  Helsinki-NLP__shroom-cap__default__train__first_rows.jsonl  Helsinki-NLP__shroom-cap__default__train__first_rows_raw.json  lt_new_answers_tokenized.jsonl  lt_new_qa.jsonl  lt_test_data.jsonl  lt_train_data.jsonl  lt_train_label.jsonl
dataset_generation/: explore_data_structure.ipynb  fixed_qas_tokenization.py  generate_answers_with_transformers.py  generate_dataset_with_transformers.py  generate_lt_labels_file.py
prompts/: system_prompt.py  user_prompt.py
