[project]
name = "shroom-cap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jinja2>=3.1.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]
